--- a/PowerApp/CanvasManifest.json
+++ b/PowerApp/CanvasManifest.json
@@ -134,8 +134,8 @@
     "AppName": "APP_GCI_004_Gestion_KRs",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
-    "IconName": "Edit",
-    "LogoFileName": "",
+    "IconName": "CalendarWeek",
+    "LogoFileName": "logo.jpg",
     "PublishDataLocally": false,
     "PublishResourcesLocally": false,
     "PublishTarget": "player",
