--- a/PowerApp/Src/ListaOKRs.fx.yaml
+++ b/PowerApp/Src/ListaOKRs.fx.yaml
@@ -160,7 +160,7 @@
             Font: =App.Theme.Font
             Height: =212
             HtmlText: |-
-                =$"<div style='border-radius: 5px;padding: 97px;margin: 0px;background-color: #f9f9f9;border-bottom: 5px solid rgba(238,40,122,0.9);'></div>"
+                =$"<div style='border-radius: 5px;padding: 97px;margin: 0px;background-color: #f9f9f9;border-bottom: 3px solid rgba(0,0,0,0.7);border-top: 2px solid rgba(0,0,0,0.3);border-left: 2px solid rgba(0,0,0,0.3);border-right: 2px solid rgba(0,0,0,0.3);'></div>"
             OnSelect: =Select(Parent)
             PaddingBottom: =1
             PaddingLeft: =1
@@ -170,6 +170,23 @@
             Width: =1252
             ZIndex: =1
 
+        HtmlText1_1 As htmlViewer:
+            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+            Font: =App.Theme.Font
+            Height: =140
+            HtmlText: |-
+                =$"<div style='border-radius: 5px;padding: 68px;margin: 0px;background-color: #EEEFED;'></div>"
+            OnSelect: =Select(Parent)
+            PaddingBottom: =1
+            PaddingLeft: =1
+            PaddingRight: =1
+            PaddingTop: =1
+            Size: =13
+            Width: =454
+            X: =787
+            Y: =51
+            ZIndex: =2
+
         TextCanvas2 As Texto:
             DisplayMode: =DisplayMode.Edit
             Height: =39
@@ -178,7 +195,7 @@
             Width: =300
             X: =10
             Y: =159
-            ZIndex: =2
+            ZIndex: =3
 
         TextCanvas2_1 As Texto:
             DisplayMode: =DisplayMode.Edit
@@ -188,7 +205,7 @@
             Width: =347
             X: =10
             Y: =30
-            ZIndex: =3
+            ZIndex: =4
 
         TextCanvas2_2 As Texto:
             DisplayMode: =DisplayMode.Edit
@@ -198,7 +215,7 @@
             Width: =348
             X: =10
             Y: =80
-            ZIndex: =4
+            ZIndex: =5
 
         Gallery3 As gallery.galleryVertical:
             BorderColor: =App.Theme.Colors.Darker40
@@ -212,13 +229,13 @@
             Width: =454
             X: =787
             Y: =54
-            ZIndex: =5
+            ZIndex: =6
 
             TextCanvas3_1 As Texto:
                 DisplayMode: =DisplayMode.Edit
                 Height: =20
-                Text: =ThisItem.nombreTareas
-                Width: =460
+                Text: ="• " & ThisItem.nombreTareas
+                Width: =300
                 X: =7
                 Y: =1
                 ZIndex: =2
@@ -245,7 +262,7 @@
             Width: =222
             X: =10
             Y: =11
-            ZIndex: =6
+            ZIndex: =7
 
         TextCanvas4_1 As Texto:
             DisplayMode: =DisplayMode.Edit
@@ -257,7 +274,7 @@
             Width: =222
             X: =10
             Y: =61
-            ZIndex: =7
+            ZIndex: =8
 
         TextCanvas4_2 As Texto:
             DisplayMode: =DisplayMode.Edit
@@ -269,7 +286,7 @@
             Width: =222
             X: =10
             Y: =140
-            ZIndex: =8
+            ZIndex: =9
 
         TextCanvas4_3 As Texto:
             Align: ='TextCanvas.Align'.End
@@ -282,7 +299,7 @@
             Width: =110
             X: =402
             Y: =143
-            ZIndex: =9
+            ZIndex: =10
 
         TextCanvas2_3 As Texto:
             DisplayMode: =DisplayMode.Edit
@@ -292,19 +309,19 @@
             Width: =28
             X: =523
             Y: =143
-            ZIndex: =10
+            ZIndex: =11
 
         TextCanvas4_4 As Texto:
             DisplayMode: =DisplayMode.Edit
             Font: =Font.Arial
             FontColor: =RGBA(40, 134, 222, 1)
             Height: =19
-            Text: ="Tareas"
+            Text: ="Lista de tareas"
             Weight: ='TextCanvas.Weight'.Semibold
             Width: =150
             X: =799
             Y: =32
-            ZIndex: =11
+            ZIndex: =12
 
         TextCanvas4_5 As Texto:
             Align: ='TextCanvas.Align'.Center
@@ -312,12 +329,12 @@
             Font: =Font.Arial
             FontColor: =RGBA(40, 134, 222, 1)
             Height: =19
-            Text: ="Finalizado"
+            Text: ="Marcar finalizado"
             Weight: ='TextCanvas.Weight'.Semibold
-            Width: =74
-            X: =1167
+            Width: =127
+            X: =1114
             Y: =32
-            ZIndex: =12
+            ZIndex: =13
 
         TextCanvas2_4 As Texto:
             DisplayMode: =DisplayMode.Edit
@@ -327,7 +344,7 @@
             Width: =222
             X: =523
             Y: =37
-            ZIndex: =13
+            ZIndex: =14
 
         TextCanvas4_6 As Texto:
             Align: ='TextCanvas.Align'.End
@@ -340,7 +357,7 @@
             Width: =70
             X: =442
             Y: =39
-            ZIndex: =14
+            ZIndex: =15
 
         Gallery6 As gallery.galleryHorizontal:
             BorderColor: =App.Theme.Colors.Darker40
@@ -353,7 +370,7 @@
             Width: =50
             X: =523
             Y: =66
-            ZIndex: =15
+            ZIndex: =16
 
             Container2 As groupContainer.manualLayoutContainer:
                 BorderColor: =RGBA(52, 152, 47, 1)
@@ -408,7 +425,7 @@
             Width: =195
             X: =558
             Y: =71
-            ZIndex: =16
+            ZIndex: =17
 
         TextCanvas4_7 As Texto:
             Align: ='TextCanvas.Align'.End
@@ -421,7 +438,7 @@
             Width: =70
             X: =442
             Y: =70
-            ZIndex: =17
+            ZIndex: =18
 
         TextCanvas4_8 As Texto:
             Align: ='TextCanvas.Align'.End
@@ -434,7 +451,7 @@
             Width: =70
             X: =442
             Y: =11
-            ZIndex: =18
+            ZIndex: =19
 
         TextCanvas4_9 As Texto:
             Align: ='TextCanvas.Align'.End
@@ -447,7 +464,7 @@
             Width: =110
             X: =402
             Y: =97
-            ZIndex: =19
+            ZIndex: =20
 
         TextCanvas4_10 As Texto:
             Align: ='TextCanvas.Align'.End
@@ -460,7 +477,7 @@
             Width: =153
             X: =358
             Y: =165
-            ZIndex: =20
+            ZIndex: =21
 
         fecini As Texto:
             DisplayMode: =DisplayMode.Edit
@@ -472,7 +489,7 @@
             Width: =70
             X: =525
             Y: =165
-            ZIndex: =21
+            ZIndex: =22
 
         fecfin As Texto:
             DisplayMode: =DisplayMode.Edit
@@ -484,7 +501,7 @@
             Width: =70
             X: =619
             Y: =165
-            ZIndex: =22
+            ZIndex: =23
 
         Gallery7 As gallery.galleryVertical:
             BorderColor: =App.Theme.Colors.Darker40
@@ -506,10 +523,13 @@
                 BorderThickness: =
                 DisplayMode: =DisplayMode.Edit
                 Fill: |-
-                    =If(
-                        estadoKr.Text = "en curso",
-                        RGBA(54, 176, 75, 1),
-                        RGBA(0, 0, 0, 1)
+                    =Switch(
+                        estadoKr.Text,
+                        "sin aprobación", RGBA(255, 0, 0, 1), // Rojo
+                        "programado", RGBA(255, 165, 0, 1),   // Naranja
+                        "en curso", RGBA(54, 176, 75, 1),     // Verde
+                        "finalizado", RGBA(0, 0, 255, 1),     // Azul
+                        RGBA(0, 0, 0, 1)                      // Color por defecto (Negro)
                     )
                 Font: =Font.Arial
                 FontColor: =RGBA(255, 255, 255, 1)
