--- a/PowerApp/DataSources/T_OKR_APP_GCI_003.json
+++ b/PowerApp/DataSources/T_OKR_APP_GCI_003.json
@@ -27,6 +27,7 @@
       "aprobacion": "aprobacion",
       "Author": "Creado por",
       "Author#Claims": "Creado por Claims",
+      "codigoKR": "codigoKR",
       "ComplianceAssetId": "Id. de activo de cumplimiento normativo",
       "Created": "Creado",
       "descripcionKR": "descripcionKR",
